ingresses/ingress-prod.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: reverse-proxy
  namespace: iskprinter-prod
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # kubernetes.io/ingress.global-static-ip-name: iskprinter-ip
spec:
  rules:
  - http:
      paths:
      - path: /api
        backend:
          serviceName: backend
          servicePort: 3000
      - path: /
        backend:
          serviceName: frontend
          servicePort: 80
  tls:
    - hosts:
      - iskprinter.com
      - www.iskprinter.com
      secretName: tls
