ingresses/ingress-staging.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: reverse-proxy
  namespace: iskprinter-staging
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: staging.iskprinter.com
    http:
      paths:
      - path: /api
        backend:
          serviceName: backend
          servicePort: 3000
      - path: /
        backend:
          serviceName: frontend
          servicePort: 80
